Lab09/.metadata/.plugins/org.eclipse.cdt.ui/lab9_aes.build.log
20:58:25 **** Incremental Build of configuration Nios II for project lab9_aes ****
make all 
Info: Building ../lab9_aes_bsp/
make --no-print-directory -C ../lab9_aes_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../lab9_aes_bsp//HAL/inc -I../lab9_aes_bsp/ -I../lab9_aes_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx  -o obj/default/hello_world.o hello_world.c
hello_world.c: In function 'SubByte':
hello_world.c:87:9: error: 'aes_sbox' undeclared (first use in this function)
  return aes_sbox[coord1][coord2];
         ^
hello_world.c:87:9: note: each undeclared identifier is reported only once for each function it appears in
hello_world.c:85:15: warning: variable 'coord2' set but not used [-Wunused-but-set-variable]
  unsigned int coord2 = word1 & 0x0F;
               ^
hello_world.c: In function 'makeKeySched':
hello_world.c:210:13: error: 'Rcon' undeclared (first use in this function)
    temp[0]^=Rcon[i/4-1] >> 6*4;
             ^
hello_world.c: In function 'SubByte':
hello_world.c:88:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [obj/default/hello_world.o] Error 1

20:58:25 Build Finished (took 121ms)

